# InferBench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/01-basic-run/: run.py
python/examples/02-ci-gate/: gate.py
python/examples/03-json-report/: report.py
python/src/inferbench/: __init__.py  benchmark.py  cli.py  errors.py  prompts.py  types.py
python/src/inferbench/cost/: cloud_comparison.py
python/src/inferbench/engines/: llamacpp.py  omlx.py  registry.py
python/src/inferbench/hardware/: detect.py
python/src/inferbench/harness/: measure.py  spawn_server.py
python/src/inferbench/recommend/: config.py
python/src/inferbench/report/: json_report.py
python/tests/: conftest.py  test_benchmark.py  test_cli.py  test_cloud_comparison.py  test_detect.py  test_json_report.py  test_llamacpp.py  test_measure.py  test_omlx.py  test_recommend.py  test_registry.py  test_spawn_server.py
src/: benchmark.test.ts  benchmark.ts  cli.ts  errors.ts  prompts.ts  types.ts
src/cost/: cloud_comparison.test.ts  cloud_comparison.ts
src/engines/: llamacpp.test.ts  llamacpp.ts  omlx.test.ts  omlx.ts  registry.test.ts  registry.ts
src/hardware/: detect.test.ts  detect.ts
src/harness/: measure.test.ts  measure.ts  spawn-server.test.ts  spawn-server.ts
src/recommend/: config.test.ts  config.ts
src/report/: json.test.ts  json.ts
